actualizacion de layouts

--- a/src/app/layouts/blank/blank.component.html
+++ b/src/app/layouts/blank/blank.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<!-- ============================================================== -->
+<!-- Only router without any element -->
+<!-- ============================================================== -->
+<mat-sidenav-container class="mainWrapper blue_theme" autosize autoFocus dir="ltr">
+    <router-outlet></router-outlet>
+</mat-sidenav-container>
